# Optimization

./: .gitignore
CS471_Project4/: CMakeLists.txt  Readme.txt  config
CS471_Project4/General/: EquationHandlers.h  Equations.c  Equations.h  FA.c  FA.h  Harmonic.c  Harmonic.h  HostCalls.h  Init.c  Init.h  MersenneMatrix.c  MersenneMatrix.h  PSO.c  PSO.h  Utilities.c  Utilities.h  init.txt  m19937ar-cok.c  m19937ar-cok.h  m19937ar-cok_main.c
CS471_Project4/PThread/: EquationHandlers.c  UtilP.c  main.c
CS471_Project4/Win32/: EquationHandlers32.c  Util32.c  main32.c
CS471_Project4/src/: EquationHandlers.h  Equations.c  Equations.h  FA.c  FA.h  Harmonic.c  Harmonic.h  HostCalls.h  Init.c  Init.h  MersenneMatrix.c  MersenneMatrix.h  PSO.c  PSO.h  Utilities.c  Utilities.h  init.txt  m19937ar-cok.c  m19937ar-cok.h  m19937ar-cok_main.c
CS471_Project4/src/PThread/: EquationHandlers.c  UtilP.c  main.c
CS471_Project4/src/Win32/: EquationHandlers32.c  Util32.c  main32.c
