# cmake_minimum_required(VERSION <specify CMake version here>)
cmake_minimum_required(VERSION 3.13)
#FIND_PATH(NAMES "cl.exe" PATHS "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Community\\VC\\Tools\\MSVC\\14.20.27508\\bin\\Hostx64\\x64" "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Community\\VC\\Tools\\MSVC\\14.20.27508\\bin\\Hostx64\\x86" "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Community\\VC\\Tools\\MSVC\\14.20.27508\\bin\\Hostx86\\x64" "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Community\\VC\\Tools\\MSVC\\14.20.27508\\bin\\Hostx86\\x86")
project(TestingSuite C)

set(CMAKE_C_STANDARD 11)
file(MAKE_DIRECTORY Results)

if(WIN32)
    add_executable(TestingSuite Win32/main32.c Win32/EquationHandlers32.c General/EquationHandlers.h General/Equations.c General/Equations.h General/Utilities.c General/Utilities.h General/MersenneMatrix.c General/MersenneMatrix.h General/Init.c General/Init.h General/m19937ar-cok.c General/m19937ar-cok.h General/PSO.c General/PSO.h General/FA.c General/FA.h Win32/Util32.c General/Harmonic.c General/Harmonic.h General/HostCalls.h)
    option(CMAKE_USE_WIN32_THREADS_INIT  "using WIN32 threads"  ON)
    target_link_libraries(TestingSuite m)
endif(WIN32)
if(UNIX)
    add_executable(TestingSuite PThread/main.c PThread/EquationHandlers.c General/EquationHandlers.h General/Equations.c General/Equations.h General/Utilities.c General/Utilities.h General/MersenneMatrix.c General/MersenneMatrix.h General/Init.c General/Init.h General/m19937ar-cok.c General/m19937ar-cok.h General/PSO.c General/PSO.h General/FA.c General/FA.h PThread/UtilP.c General/Harmonic.c General/Harmonic.h General/HostCalls.h)
    find_package(Threads REQUIRED)
    set(THREADS_PREFER_PTHREAD_FLAG ON)
    target_link_libraries(TestingSuite pthread m)
endif(UNIX)
